--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -14,7 +14,8 @@
     "import torch.optim as optim\n",
     "import numpy as np\n",
     "from sklearn.model_selection import KFold\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.preprocessing import LabelEncoder"
    ]
   },
   {
@@ -34,10 +35,9 @@
    "outputs": [],
    "source": [
     "def load_data(filename1, filename2):\n",
-    "    x = pd.read_csv(filename1)\n",
-    "    x = x.set_index(x.columns[0])\n",
-    "    y = pd.read_csv(filename2)['PAM50'] \n",
-    "    return x.T, y"
+    "    x = pd.read_csv(filename1, index_col=0)\n",
+    "    y = pd.read_csv(filename2)['PAM50']\n",
+    "    return x, y"
    ]
   },
   {
@@ -46,7 +46,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X,y = load_data(file_path1, file_path2)"
+    "X_pd,y_pd = load_data(file_path1, file_path2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X_pd.to_numpy().T\n",
+    "y = LabelEncoder().fit_transform(y_pd)"
    ]
   },
   {
@@ -56,24 +66,26 @@
    "outputs": [],
    "source": [
     "class SoftmaxClassifier(nn.Module):\n",
-    "    def __init__(self, num_features, num_classes, L1=0.01, L2=0.01):\n",
+    "    def __init__(self, X, y, L1=0.01, L2=0.01):\n",
     "        super(SoftmaxClassifier, self).__init__()\n",
+    "        num_features = X.shape[1]\n",
+    "        num_classes = len(np.unique(y))\n",
     "        self.fc = nn.Linear(num_features, num_classes, bias=True)  # Y = W*X + b + L1*|W| + L2*W^2 \n",
-    "        self.L1 = L1 # shape: (num_classes, num_features)\n",
-    "        self.L2 = L2 # shape: (num_classes, num_features)\n",
-    "    \n",
+    "        self.L1 = L1 \n",
+    "        self.L2 = L2 \n",
+    "\n",
     "    def forward(self, x):\n",
     "        return torch.softmax(self.fc(x), dim=1) \n",
+    "    \n",
+    "    def L1_L2_loss(self):\n",
+    "        # Transpose weight to get shape (num_features, num_classes)\n",
+    "        W = self.fc.weight.T\n",
+    "      \n",
+    "        # Compute the sum over the squared weights per row only once\n",
+    "        row_sum = torch.mean(W*W, dim=1)\n",
     "\n",
-    "    def group_loss(self):\n",
-    "\n",
-    "        W = self.fc.weight  # Shape: (num_classes, num_features)\n",
-    "\n",
-    "        L1 = torch.max(torch.abs(W), dim=1)[0]  \n",
-    "        L1 = self.L1 * torch.mean(L1)\n",
-    "\n",
-    "        L2 = torch.sum(W * W, dim=1)\n",
-    "        L2 = self.L2 * torch.mean(L2)\n",
+    "        L1 = self.L1 * torch.mean(torch.sqrt(row_sum + 1e-8)) # Group L1\n",
+    "        L2 = self.L2 * torch.mean(row_sum) # Group L2\n",
     "\n",
     "        return L1 + L2\n",
     "\n",
@@ -85,7 +97,7 @@
     "        outputs = self.forward(inputs)  # Forward pass\n",
     "        criterion = nn.CrossEntropyLoss()  # Cross-entropy loss for classification\n",
     "        loss = criterion(outputs, labels)  # Compute loss\n",
-    "        loss += self.group_loss()  # Add regularization loss\n",
+    "        loss += self.L1_L2_loss()  # Add regularization loss\n",
     "        return loss\n",
     "\n",
     "    def configure_optimizers(self, learning_rate=0.001):\n",
@@ -96,7 +108,7 @@
     "        return optimizer\n",
     "\n",
     "# Cross-validation function\n",
-    "def cross_validate(model, X, y, k=5, batch_size=32, epochs=10):\n",
+    "def cross_validate(Class, X, y, k=5, batch_size=32, epochs=10):\n",
     "    kf = KFold(n_splits=k, shuffle=True, random_state=42)  # K-fold cross-validation\n",
     "    fold_accuracies = []  # To store accuracy for each fold\n",
     "\n",
@@ -107,19 +119,18 @@
     "        X_train, X_val = X[train_idx], X[val_idx]\n",
     "        y_train, y_val = y[train_idx], y[val_idx]\n",
     "\n",
-    "        # Convert to torch tensors\n",
     "        X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
     "        y_train_tensor = torch.tensor(y_train, dtype=torch.long)\n",
     "        X_val_tensor = torch.tensor(X_val, dtype=torch.float32)\n",
-    "        y_val_tensor = torch.tensor(y_val, dtype=torch.long)\n",
+    "        #y_val_tensor = torch.tensor(y_val, dtype=torch.long)\n",
     "\n",
     "        # Initialize model and optimizer\n",
-    "        model_instance = model(X_train.shape[1], len(np.unique(y)))  # num_features, num_classes\n",
-    "        optimizer = model_instance.configure_optimizers()\n",
+    "        model = Class(X_train, y_train)  # Initialize model\n",
+    "        optimizer = model.configure_optimizers()\n",
     "\n",
     "        # Train the model on this fold\n",
     "        for epoch in range(epochs):\n",
-    "            model_instance.train()\n",
+    "            model.train()\n",
     "            permutation = torch.randperm(X_train_tensor.size(0))\n",
     "\n",
     "            for i in range(0, X_train_tensor.size(0), batch_size):\n",
@@ -127,14 +138,14 @@
     "                batch_X, batch_y = X_train_tensor[batch_indices], y_train_tensor[batch_indices]\n",
     "\n",
     "                optimizer.zero_grad()\n",
-    "                loss = model_instance.training_step((batch_X, batch_y))\n",
+    "                loss = model.training_step((batch_X, batch_y))\n",
     "                loss.backward()\n",
     "                optimizer.step()\n",
     "\n",
     "        # Evaluate the model on the validation set\n",
-    "        model_instance.eval()\n",
+    "        model.eval()\n",
     "        with torch.no_grad():\n",
-    "            outputs = model_instance(X_val_tensor)\n",
+    "            outputs = model(X_val_tensor)\n",
     "            _, predicted = torch.max(outputs, 1)\n",
     "            accuracy = accuracy_score(y_val, predicted.numpy())  # Compute accuracy\n",
     "            fold_accuracies.append(accuracy)\n",
@@ -145,6 +156,74 @@
     "    avg_accuracy = np.mean(fold_accuracies)\n",
     "    print(f\"\\nAverage accuracy across {k} folds: {avg_accuracy:.4f}\")\n",
     "    return avg_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of features: 30865\n",
+      "Number of classes: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_features = X.shape[1]\n",
+    "num_classes = len(np.unique(y))\n",
+    "print(f\"Number of features: {num_features}\")\n",
+    "print(f\"Number of classes: {num_classes}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = SoftmaxClassifier(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training fold 1/5\n",
+      "Accuracy for fold 1: 0.4935\n",
+      "Training fold 2/5\n",
+      "Accuracy for fold 2: 0.2459\n",
+      "Training fold 3/5\n",
+      "Accuracy for fold 3: 0.2378\n",
+      "Training fold 4/5\n",
+      "Accuracy for fold 4: 0.5212\n",
+      "Training fold 5/5\n",
+      "Accuracy for fold 5: 0.5188\n",
+      "\n",
+      "Average accuracy across 5 folds: 0.4034\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.4034263062526901)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_validate(SoftmaxClassifier,X, y, k=5, batch_size=32, epochs=10)"
    ]
   }
  ],
